--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
             </article>
         </div>
         <div class="right-half">
+            <div class="loginbuttons">
+                <a href="LOGIN PAGE\login.html"><button>Login</button></a>
+                <a href="SIGNUP\signup.html"><button>SignUp</button></a>
+            </div>
             <article>
+                
+                
                 <form action="submit">
                     <input type="text" placeholder="Search">
                     <br>
