--- a/PLAYLISTS PAGE/playlists.html
+++ b/PLAYLISTS PAGE/playlists.html
@@ -7,6 +7,7 @@
     <title>Playlists</title>
 </head>
 <body>
+    <a href="create_playlist.html"><button>Create A Playlist</button></a>
     <!-- Use of nested unordered lists -->
     <ul>
         <ul>
