--- a/index.html
+++ b/index.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twilight.</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="total-container">
-        <div class="left-half">
-            <article>
-                <div class="options-homepage-container">
-                    <div class="options-homepage"><a href="ACCOUNT PAGE\account_page.html">ACCOUNT</a></div>
-                    <br>
-                    <div class="options-homepage"><a href="PLAYLISTS PAGE\playlists.html">PLAYLISTS</a></div>
-                    <br>
-                    <div class="options-homepage"><a href="TRENDING\trending.html">TRENDING</a></div>
-                </div>
-            </article>
-        </div>
-        <div class="right-half">
-            <div class="loginbuttons">
-                <a href="LOGIN PAGE\login.html"><button>Login</button></a>
-                <a href="SIGNUP\signup.html"><button>SignUp</button></a>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Twilight.</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;0,900;1,200;1,700&display=swap" rel="stylesheet">
+    </head>
+    <body>
+
+        <div class="total-container">
+            <div class="left-half">
+
+                <article>
+                    <div class="options-homepage-container">
+                        <div class="options-homepage"><a href="ACCOUNT PAGE\account_page.html">ACCOUNT</a></div>
+                        <br>
+                        <div class="options-homepage"><a href="PLAYLISTS PAGE\playlists.html">PLAYLISTS</a></div>
+                        <br>
+                        <div class="options-homepage"><a href="TRENDING\trending.html">TRENDING</a></div>
+                    </div>
+                </article>
             </div>
-            <article>
-                
-                
-                <form action="submit">
-                    <input type="text" placeholder="Search">
-                    <br>
-                    <input type="button" value="submit">
-                </form>
-            </article>
+            <div class="right-half">
+                <div class="loginbuttons">
+                    <a href="LOGIN PAGE\login.html"><button>Login</button></a>
+                    <a href="SIGNUP\signup.html"><button>SignUp</button></a>
+                </div>
+                <article>
+                    <div class="searchform">
+                        <form action="submit">
+                            <input type="text" placeholder="Search For Any Song" id="searchbox">
+                            <br>
+                            <input type="button" value="Search" id="searchbutton">
+                        </form>
+                    </div>    
+                </article>
+            </div>
         </div>
-    </div>
-    <script src="app.js"></script>
-</body>
+        <p class="text">Twilight.</p>
+        <p class="textdesc">Your Music Companion...</p>
+        <script src="app.js"></script>
+    </body>
 </html>
