--- a/SIGNUP/signup.html
+++ b/SIGNUP/signup.html
@@ -8,14 +8,18 @@
 </head>
 <body>
     <div class="container">
-        <form action="submit">
+        <form action="song.php" method = 'POST'>
             <label>First Name:<input type="text" name="fname" id="#fname"></label>
             <br>
             <label>Last Name:<input type="text" name="lname" id="#lname"></label>
             <br>
+            <label>Username:<input type='text' name='Username' id='Username'></label>
+            <br>
             <label>Password:<input type="password" name="password" id="#password"></label>
             <br>
             <label>Retype Password:<input type="password" name="password" id="#password"></label>
+            <br>
+            <label>Email:<input type = 'Email' name = 'Email' id = 'Email'></label>
             <br>
             <input type="submit" value="LOGIN" >
         </form>
