--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
                 </article>
             </div>
         </div>
-        <p class="text">Twilight.</p>
-        <p class="textdesc">Your Music Companion...</p>
+        <a href="index.html"><p class="text">Twilight.</p></a>
+        <!-- <p class="textbottom">&#169;Twilight All rights reserved 2023 </p> -->
+        <!-- <p class="textdesc">Your Music Companion...</p> -->
         <script src="app.js"></script>
     </body>
 </html>
