--- a/ACCOUNT PAGE/account_page.html
+++ b/ACCOUNT PAGE/account_page.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="account_page.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;0,900;1,200;1,700&display=swap" rel="stylesheet">
     <title>Account</title>
 </head>
 <body>
-    <h2>Welcome, 
-        <p> 
-            <!-- Add the username using javascript -->
-        </p>
-    </h2>
+    <p class="welcome">Welcome,</p><p class="name">JAMES</p>
+
     <!-- Pic, name, address, subscription status, most played song -->
     <div class="container">
         <img src="" alt="">
-        <h3>Name: <p class="name"> </p> </h3>
-        <h3>Address: <p class="address"> </p> </h3>
-        <h3>Subscription: <p class="subscription"> </p> </h3>
-        <h3>Most Played Song: <p class="mostplydsong"> </p> </h3>
-
+        <h3>Name: <span class="username"> cooljames69</span> </h3>
+        <h3>Address: <span class="address">modda@gmail.com </span> </h3>
+        <h3>Subscription: <span class="subscription">ACTIVE </span> </h3>
+        <h3>Most Played Song: <span class="mostplydsong"> SNAP by Rosa Linn</span> </h3>
     </div>
 </body>
 </html>
