--- a/LOGIN PAGE/login.html
+++ b/LOGIN PAGE/login.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="login.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,700;0,900;1,200;1,700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head>
 <body>
+    <p>LOGIN</p>
     <div class="container">
         <form action="submit">
-            <label>Username:<input type="text" name="username" id="#username"></label>
+            <input type="text" placeholder="Username" name="username" id="inputfield">
             <br>
-            <label>Password:<input type="password" name="password" id="#password"></label>
+            <input type="password" placeholder="Password" name="password" id="inputfield">
             <br>
-            <input type="submit" value="LOGIN" >
+            <input id="button" type="submit" value="LOGIN" >
         </form>
         
     </div>
+
 </body>
 </html>
