--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
                 <article>
                     <div class="options-homepage-container">
-                        <div class="options-homepage"><a href="ACCOUNT PAGE\account_page.html">ACCOUNT</a></div>
+                        <!-- <div class="options-homepage"><a href="ACCOUNT PAGE\account_page.html">ACCOUNT</a></div> -->
                         <br>
                         <div class="options-homepage"><a href="PLAYLISTS PAGE\playlists.html">PLAYLISTS</a></div>
                         <br>
