--- a/indexloggedin.html
+++ b/indexloggedin.html
@@ -28,6 +28,7 @@
             <div class="right-half">
                 <div class="loginbuttons">
                     <a href="ACCOUNT PAGE/account_page.html"><button>Name</button></a>
+                    <a><button>Logout</button></a>
 
                 </div>
                 <article>
